* Moved libwandevent3 into trunk

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,13 @@
 lib_LTLIBRARIES = libwandevent.la
 include_HEADERS = libwandevent.h
 
-libwandevent_la_SOURCES = event.c libwandevent.h
-libwandevent_la_LDFLAGS = -version-info 2:1:0
+if BUILD_EPOLL
+HELPERSOURCE=epollhelper.c epollhelper.h
+else
+HELPERSOURCE=selecthelper.c selecthelper.h
+endif
+
+libwandevent_la_SOURCES = event.c libwandevent.h $(HELPERSOURCE)
+libwandevent_la_LDFLAGS = -version-info 3:0:0
 
 
