--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libwandevent
 Priority: extra
 Maintainer: Brendon Jones <brendonj@waikato.ac.nz>
-Build-Depends: debhelper (>= 7.0.50~), autotools-dev
+Build-Depends: debhelper (>= 7.0.50~), autotools-dev, automake, libtool
 Standards-Version: 3.8.4
 Section: libs
 Homepage: http://research.wand.net.nz/software/libwandevent.php
