Add Debian/Ubuntu arm64 to the list of GitLab CI/CD build targets.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,13 +50,12 @@ build-bionic-armhf:
     - *fix_ubuntu_multiarch_apt
     - *generic_apt_build
 
-#build-bionic-arm64:
-#  <<: *build_template
-#  image: multiarch/ubuntu-debootstrap:arm64-bionic
-#  script:
-#    - *fix_ubuntu_multiarch_apt
-#    - *generic_apt_build
-
+build-bionic-arm64:
+  <<: *build_template
+  image: multiarch/ubuntu-debootstrap:arm64-bionic
+  script:
+    - *fix_ubuntu_multiarch_apt
+    - *generic_apt_build
 
 build-xenial-amd64:
   <<: *build_template
@@ -76,12 +75,12 @@ build-xenial-armhf:
     - *fix_ubuntu_multiarch_apt
     - *generic_apt_build
 
-#build-xenial-arm64:
-#  <<: *build_template
-#  image: multiarch/ubuntu-debootstrap:arm64-xenial
-#  script:
-#    - *fix_ubuntu_multiarch_apt
-#    - *generic_apt_build
+build-xenial-arm64:
+  <<: *build_template
+  image: multiarch/ubuntu-debootstrap:arm64-xenial
+  script:
+    - *fix_ubuntu_multiarch_apt
+    - *generic_apt_build
 
 build-buster-amd64:
   <<: *build_template
@@ -95,9 +94,9 @@ build-buster-armhf:
   <<: *build_template
   image: multiarch/debian-debootstrap:armhf-buster
 
-#build-buster-arm64:
-#  <<: *build_template
-#  image: multiarch/debian-debootstrap:arm64-buster
+build-buster-arm64:
+  <<: *build_template
+  image: multiarch/debian-debootstrap:arm64-buster
 
 build-stretch-amd64:
   <<: *build_template
@@ -111,9 +110,9 @@ build-stretch-armhf:
   <<: *build_template
   image: multiarch/debian-debootstrap:armhf-stretch
 
-#build-stretch-arm64:
-#  <<: *build_template
-#  image: multiarch/debian-debootstrap:arm64-stretch
+build-stretch-arm64:
+  <<: *build_template
+  image: multiarch/debian-debootstrap:arm64-stretch
 
 build-jessie-amd64:
   <<: *build_template
